--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -11,7 +11,7 @@
 
         <ng-template #caption>
             <div class="flex flex-wrap justify-end gap-2">
-                <p-button label="Collapse All" icon="pi pi-minus" text (onClick)="filtrarProductos()" />
+                <p-button label="Collapse All" icon="pi pi-minus" text  />
             </div>
         </ng-template>
 
@@ -30,9 +30,13 @@
         <ng-template #body let-product let-expanded="expanded">
             <tr>
                 <td>
-                    <p-button type="button" pRipple [pRowToggler]="product" [text]="true" [rounded]="true" [plain]="true" [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'" />
+                    <p-button type="button"  pRipple
+                    [pRowToggler]="product" [text]="true"
+                     [rounded]="true" [plain]="true"
+                      [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"
+                       (onClick)="filtrarProductos(product)" />
                 </td>
-                <td>{{ product.name }}</td>
+                <td  >{{ product.proceso_contratacion }}</td>
                 <!-- <td><img [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + product.image" [alt]="product.name" width="50" class="shadow-lg" /></td>
                 <td>{{ product.price | currency : 'USD' }}</td>
                 <td>{{ product.category }}</td>
@@ -46,23 +50,19 @@
             <tr>
                 <td colspan="7">
                     <div class="p-4">
-                        <h5>Ordenando por {{ product.name }}</h5>
+                        <h5>Ordenando por {{ product.proceso_contratacion }}</h5>
                         <p-table [value]="product.orders" dataKey="id">
                             <ng-template #header>
                                 <tr>
-                                    <th *ngFor="let col of selectedColumns" pSortableColumn="id">
+                                    <th *ngFor="let col of selectedColumns">
                                       {{ col.header }}
-                                      <p-sortIcon field="price" />
+
                                     </th>
 
                                 </tr>
                             </ng-template>
-                            <ng-template #body let-order>
+                            <ng-template #body>
                                 <tr>
-                                    <td *ngFor="let col of selectedColumns">
-                                        {{ product[col.field] }}
-                                    </td>
-
                                     <td><p-button type="button" icon="pi pi-search" /></td>
                                 </tr>
                             </ng-template>
@@ -77,6 +77,13 @@
             </tr>
         </ng-template>
     </p-table>
+</div>
+
+<div *ngFor="let i of this.filteredProducts">
+
+  <p>
+    {{ i.proceso_contratacion }}
+  </p>
 </div>
 
 
