observaciones realizadas sobre la reunion de 3/2/2025

--- a/src/app/landing/components/herowidget.html
+++ b/src/app/landing/components/herowidget.html
@@ -1,12 +1,15 @@
 <div id="hero">
   <div class="fondoescrito mx-4 md:mx-20 mt-0 md:mt-6">
-    <h1 class="text-3xl sm:text-4xl md:text-6xl font-bold text-white leading-tight">
-      <span class="font-light block">BIENVENIDOS</span>
+    <h1 class="text-lg sm:text-lg md:text-2xl font-bold text-white leading-tight mb-4">
+      <span class="font-light block"><b>BIENVENIDOS A “CREACIÓN
+        DE BASE DE DATOS DE 1000 PARTIDAS CON SUS ANÁLISIS DE PRECIOS UNITARIOS
+        (APU) E INSUMOS, ASÍ COMO 4 PRESUPUESTOS TIPO PARA METOR, SEGÚN
+        ESPECIFICACIONES DEL CONTRATANTE EN ÁREAS DIVERSAS A SER ACORDADAS”.</b></span>
       <span class="typing-effect text-base sm:text-xl md:text-3xl lg:text-4xl" #typedText></span>
     </h1>
     <p class="font-normal mt-2 md:mt-4 text-white text-base sm:text-lg">
       <span class="text-red-500 bg-white rounded px-2">JUNTOS SUMAMOS</span>
-      <span class="text-blue-500 bg-white rounded px-2 ml-2 sm:ml-4">DIVIDIDOS RESTAMOS</span>
+      <span class="text-blue-500 bg-white rounded px-2 ml-2 sm:ml-4"><a href="jose.avif">DIVIDIDOS RESTAMOS</a></span>
     </p>
 <a href="/listado">
     <p-button
