--- a/src/app/landing/components/herowidget.css
+++ b/src/app/landing/components/herowidget.css
@@ -41,7 +41,7 @@
    left: 0;
    width: 100%;
    height: 100%;
-   background-image: url('http://localhost:4200/imgs/working.jpg');
+   background-image: url('http://localhost:4200/metor.jpg');
    /* Ruta a la imagen */
    background-size: cover;
    /* o contain si prefieres */
