--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -22,7 +22,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('http://localhost:4200/imgs/working.jpg');
+  background-image: url('http://localhost:4200/jose.avif');
   background-size: contain;
   /* Cambia a contain */
   background-repeat: no-repeat;
