--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -90,10 +90,9 @@
 
 <app-topbar class="mb-6"></app-topbar>
 
-<p-speeddial (onClick)="collapseAll()"  direction="left" [style]="{ position: 'fixed', top: 'calc(50% - 2rem)', left: 0 }" />
+<!-- <p-speeddial (onClick)="collapseAll()"  direction="left" [style]="{ position: 'fixed', top: 'calc(50% - 2rem)', left: 0 }" /> -->
 
 <div class="card mr-8 ml-8 mb-8 shadow-xl" style="margin-top: 75px;">
-
   <p-table
    [value]="products"
    dataKey="id"
@@ -103,7 +102,7 @@
    (onRowCollapse)="onRowCollapse($event)">
         <ng-template #caption>
             <div class="flex flex-wrap justify-end gap-2">
-                <p-button label="Cerrar todo" icon="pi pi-minus" text (onClick)="collapseAll()" />
+                <p-button label="Cerrar todo" severity="danger" icon="pi pi-minus" text (onClick)="collapseAll()" />
             </div>
         </ng-template>
         <ng-template #header>
@@ -112,20 +111,30 @@
                 <th pSortableColumn="proceso_contratacion">
                   Proceso de Contratación
                 </th>
+                <th>descripción</th>
 
             </tr>
         </ng-template>
         <ng-template #body let-product let-expanded="expanded">
             <tr>
-                <td>
+              <td></td>
+                <!-- <td>
                     <p-button type="button"  pRipple
                     [pRowToggler]="product" [text]="true"
                      [rounded]="true" [plain]="true"
                       [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-down'"
                        (onClick)="filtrarProductos(product)"
                        (onClick)="collapseAll()" />
+                </td> -->
+                <td>
+                  <p-button severity="info" (onClick)="filtrarProductos(product)"
+                      class="mt-2" (click)="showDialog(filteredProducts)">
+                      {{ product.proceso_contratacion }}
+                    </p-button>
                 </td>
-                <td><b>{{ product.proceso_contratacion }}</b></td>
+                <td>{{product.descripcion}}</td>
+
+                <!-- <td><b>{{ product.proceso_contratacion }}</b></td> -->
 
             </tr>
         </ng-template>
@@ -172,22 +181,29 @@
 
 
 
-<p-dialog header="Archivos" [modal]="true" [(visible)]="visible" [style]="{ width: '100rem', height: '100rem' }" [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }" [maximizable]="true">
-        <p-table [tableStyle]="{ 'min-width': '50rem' }">
+<p-dialog header="Procesos de Contratación" [modal]="true" [(visible)]="visible" [style]="{ width: '100rem', height: '100rem' }" [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }" [maximizable]="true">
+  <p-multiselect class="mb-9" display="chip" [options]="cols" [(ngModel)]="selectedColumns" optionLabel="header" selectedItemsLabel="{0} columns selected" [style]="{ 'min-width': '200px' }" placeholder="Choose Columns" />
+  <p-table stripedRows [value]="filteredProducts" [columns]="selectedColumns" scrollable="true" [style]="{width: '1325px' }" scrollHeight="800px" showGridlines [resizableColumns]="true" [columns]="cols" [reorderableColumns]="true">
     <ng-template #header>
-        <tr>
-            <th>Proceso de Contratación</th>
-            <th>Archivo</th>
-        </tr>
+      <tr>
+        <th *ngFor="let col of selectedColumns" pResizableColumn pReorderableColumn>
+          {{ col.header  }}
+        </th>
+      </tr>
     </ng-template>
-    <ng-template #body>
-        <tr>
-            <td> {{ filteredProducts}} </td>
-            <td> product.name </td>
-        </tr>
+    <ng-template #body let-item>
+      <tr>
+        <td *ngFor="let col of selectedColumns">
+          {{ item[col.field] || '- Sin información -' }}
+        </td>
+        <!-- <td>{{ item.proceso_contratacion }}</td>
+             <td>{{ item.proceso_contratacion }}</td>
+             <td>{{ item.quantity }}</td>
+        -->
+      </tr>
     </ng-template>
-</p-table>
-    </p-dialog>
+  </p-table>
+</p-dialog>
 
 <!-- <div *ngFor="let i of this.filteredProducts">
 
