--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -99,7 +99,8 @@
    [tableStyle]="{ 'min-width': '60rem' }"
    [expandedRowKeys]="expandedRows"
    (onRowExpand)="onRowExpand($event)"
-   (onRowCollapse)="onRowCollapse($event)">
+   (onRowCollapse)="onRowCollapse($event)"
+   showGridlines>
         <ng-template #caption>
             <div class="flex flex-wrap justify-end gap-2">
                 <p-button label="Cerrar todo" severity="danger" icon="pi pi-minus" text (onClick)="collapseAll()" />
@@ -107,17 +108,18 @@
         </ng-template>
         <ng-template #header>
             <tr>
-                <th ></th>
+
                 <th pSortableColumn="proceso_contratacion">
                   Proceso de Contratación
                 </th>
                 <th>descripción</th>
+                <th>Total de Partidas</th>
+                <th>Archivos</th>
 
             </tr>
         </ng-template>
         <ng-template #body let-product let-expanded="expanded">
             <tr>
-              <td></td>
                 <!-- <td>
                     <p-button type="button"  pRipple
                     [pRowToggler]="product" [text]="true"
@@ -132,7 +134,13 @@
                       {{ product.proceso_contratacion }}
                     </p-button>
                 </td>
-                <td>{{product.descripcion}}</td>
+                <td>{{product.descripcion_corta_nombre_contrato}}</td>
+                <td>{{product.no_partida}}</td>
+                <td><p-button severity="danger" (onClick)="filtrarProductos(product)"
+                      class="mt-2" (click)="showDialog2(filteredProducts)">
+                      Ver
+                    </p-button>
+                </td>
 
                 <!-- <td><b>{{ product.proceso_contratacion }}</b></td> -->
 
@@ -195,6 +203,29 @@
       <tr>
         <td *ngFor="let col of selectedColumns">
           {{ item[col.field] || '- Sin información -' }}
+        </td>
+        <!-- <td>{{ item.proceso_contratacion }}</td>
+             <td>{{ item.proceso_contratacion }}</td>
+             <td>{{ item.quantity }}</td>
+        -->
+      </tr>
+    </ng-template>
+  </p-table>
+</p-dialog>
+
+<p-dialog header="Archivos" [modal]="true" [(visible)]="visible2" [style]="{ width: '100rem', height: '100rem' }" [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }" [maximizable]="true">
+  <p-table stripedRows [value]="filteredProducts" [columns]="selectedColumns" scrollable="true" [style]="{width: '1360px' }" scrollHeight="650px" showGridlines [resizableColumns]="true" [columns]="cols" [reorderableColumns]="true">
+    <ng-template #header>
+      <tr>
+        <th >
+          Nombre
+        </th>
+      </tr>
+    </ng-template>
+    <ng-template #body let-item>
+      <tr>
+        <td >
+          archivos
         </td>
         <!-- <td>{{ item.proceso_contratacion }}</td>
              <td>{{ item.proceso_contratacion }}</td>
