--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -100,20 +100,37 @@
    [expandedRowKeys]="expandedRows"
    (onRowExpand)="onRowExpand($event)"
    (onRowCollapse)="onRowCollapse($event)"
-   showGridlines>
+   showGridlines
+   >
         <ng-template #caption>
-            <div class="flex flex-wrap justify-end gap-2">
+            <!-- <div class="flex flex-wrap justify-end gap-2">
                 <p-button label="Cerrar todo" severity="danger" icon="pi pi-minus" text (onClick)="collapseAll()" />
-            </div>
+             -->
+          <div class="flex flex-wrap justify-end gap-2">
+             <p-iconfield iconPosition="left" class="ml-auto">
+                <p-inputicon>
+                    <i class="pi pi-search"></i>
+                </p-inputicon>
+                <input
+                    pInputText
+                    type="text"
+                    placeholder="Buscar Proceso"
+                />
+            </p-iconfield>
+          </div>
         </ng-template>
         <ng-template #header>
             <tr>
 
-                <th pSortableColumn="proceso_contratacion">
+                <th>
                   Proceso de Contratación
                 </th>
-                <th>descripción</th>
-                <th>Total de Partidas</th>
+                <th>
+                  descripción
+                </th>
+                <th>
+                  Total de Partidas
+                </th>
                 <th>Archivos</th>
 
             </tr>
@@ -189,8 +206,10 @@
 
 
 
+
 <p-dialog header="Procesos de Contratación" [modal]="true" [(visible)]="visible" [style]="{ width: '100rem', height: '100rem' }" [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }" [maximizable]="true">
-  <p-multiselect class="mb-9" display="chip" [options]="cols" [(ngModel)]="selectedColumns" optionLabel="header" selectedItemsLabel="{0} columns selected" [style]="{ 'min-width': '200px' }" placeholder="Choose Columns" />
+      <p-multiselect class="mb-9" display="chip" [options]="cols" [(ngModel)]="selectedColumns" optionLabel="header" selectedItemsLabel="{0} columns selected" [style]="{ 'min-width': '200px' }" placeholder="Choose Columns" />
+  <div class="flex justify-center items-center">
   <p-table stripedRows [value]="filteredProducts" [columns]="selectedColumns" scrollable="true" [style]="{width: '1360px' }" scrollHeight="650px" showGridlines [resizableColumns]="true" [columns]="cols" [reorderableColumns]="true">
     <ng-template #header>
       <tr>
@@ -211,6 +230,7 @@
       </tr>
     </ng-template>
   </p-table>
+</div>
 </p-dialog>
 
 <p-dialog header="Archivos" [modal]="true" [(visible)]="visible2" [style]="{ width: '100rem', height: '100rem' }" [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }" [maximizable]="true">
