--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -234,7 +234,7 @@
 </p-dialog>
 
 <p-dialog header="Archivos" [modal]="true" [(visible)]="visible2" [style]="{ width: '100rem', height: '100rem' }" [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }" [maximizable]="true">
-  <p-table stripedRows [value]="urlsSeguras" [columns]="selectedColumns" scrollable="true" [style]="{width: '1360px' }" scrollHeight="650px" showGridlines [resizableColumns]="true" [columns]="cols" [reorderableColumns]="true">
+   <!-- <p-table stripedRows [value]="urlsSeguras" [columns]="selectedColumns" scrollable="true" [style]="{width: '1360px' }" scrollHeight="650px" showGridlines [resizableColumns]="true" [columns]="cols" [reorderableColumns]="true">
     <ng-template #header>
       <tr>
         <th>
@@ -247,13 +247,32 @@
         <td >
           <a [href]="item" target="_blank">{{ item }}</a>
         </td>
-        <!-- <td>{{ item.proceso_contratacion }}</td>
+          <td>{{ item.proceso_contratacion }}</td>
              <td>{{ item.proceso_contratacion }}</td>
              <td>{{ item.quantity }}</td>
-        -->
       </tr>
     </ng-template>
-  </p-table>
+  </p-table> -->
+
+<div class="card">
+    <p-carousel [value]="urlsSeguras" [numVisible]="3" [numScroll]="3" [circular]="false" [responsiveOptions]="responsiveOptions">
+        <ng-template let-url #item>
+    <div class="border border-surface rounded-border m-2 p-4">
+        <div class="mb-4">
+            <div class="relative mx-auto">
+                <iframe [src]="url" frameborder="0"></iframe>  </div>
+        </div>
+        <div class="mb-4 font-medium">{{ url.name }}</div>
+        <div class="flex justify-between items-center">
+            <span>
+                <a [href]="url" target="_blank"><p-button icon="pi pi-eye" severity="info" [outlined]="true" /></a>
+                <p></p>
+            </span>
+        </div>
+    </div>
+</ng-template>
+    </p-carousel>
+</div>
 </p-dialog>
 
 <!-- <div *ngFor="let i of this.filteredProducts">
